--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
 language: node_js
-sudo: false
+sudo: required
 node_js:
   - lts/*
+cache: npm
+install:
+  - npm i react-scripts
+  - npm install npm@latest -g
 before_script:
   - bash <(curl -Ls https://coverage.codacy.com/get.sh) download
-  - yarn install
+script:
+  - npm test
 after_success:
   - bash <(curl -Ls https://coverage.codacy.com/get.sh)
 branches:
