--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
     "engines": {
-    "node": "14.x"
+    "node": "14.15.4"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
