--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
     "engines": {
-    "node": "14.15.4"
+    "node": "14.15.4",
+	"npm": "6.14.10"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.9",
@@ -26,7 +27,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
