--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "sweetalert": "^2.1.2",
     "web-vitals": "^1.1.0"
   },
+  "optionalDependencies": {
+    "fsevents": "2.1.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
