--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "jszip": "^3.6.0",
     "primeicons": "^4.1.0",
     "primereact": "^6.1.0",
     "react": "^17.0.1",
