--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "js-file-download": "^0.4.12",
     "jszip": "^3.6.0",
+    "paypal-checkout": "^4.0.328",
     "primeicons": "^4.1.0",
     "primereact": "^6.1.0",
     "react": "^17.0.1",
