--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.26.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chokidar": "^2.1.8",
     "js-file-download": "^0.4.12",
     "jszip": "^3.6.0",
     "paypal-checkout": "^4.0.328",
     "primeicons": "^4.1.0",
     "primereact": "^6.1.0",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.1",
     "react-paginate": "^7.1.2",
     "react-router-dom": "^5.2.0",
