--- a/package.json
+++ b/package.json
@@ -16,15 +16,17 @@
     "chokidar": "^2.1.8",
     "js-file-download": "^0.4.12",
     "jszip": "^3.6.0",
+    "multiselect-react-dropdown": "^1.6.11",
     "paypal-checkout": "^4.0.328",
     "primeicons": "^4.1.0",
-    "primereact": "^6.1.0",
+    "primereact": "^6.3.0",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
     "react-dom": "^17.0.1",
     "react-paginate": "^7.1.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
+    "react-select": "^4.3.0",
     "react-star-ratings": "^2.3.0",
     "react-test-renderer": "^17.0.1",
     "react-transition-group": "^4.4.1",
