--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "primereact": "^6.3.0",
     "react": "^17.0.1",
     "react-apexcharts": "^1.3.9",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
     "react-paginate": "^7.1.2",
     "react-router-dom": "^5.2.0",
