--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "chokidar": "^2.1.8",
+    "emailjs-com": "^2.6.4",
     "js-file-download": "^0.4.12",
     "jszip": "^3.6.0",
     "multiselect-react-dropdown": "^1.6.11",
