--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
+  "homepage": "https://alvalfric.github.io/indvelopers-frontend",
   "name": "indvelopers",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "private": true,
   "engines": {
     "node": "14.16.0",
@@ -14,6 +15,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "chokidar": "^2.1.8",
+    "gh-pages": "^3.1.0",
     "js-file-download": "^0.4.12",
     "jszip": "^3.6.0",
     "paypal-checkout": "^4.0.328",
@@ -40,7 +42,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --passWithNoTests",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
