--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://alvalfric.github.io/indvelopers-frontend",
+  "homepage": "https://alvalfric.github.io",
   "name": "indvelopers",
   "version": "0.3.0",
   "private": true,
@@ -44,7 +44,7 @@
     "test": "react-scripts test --passWithNoTests",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -b feature-issue#179 -d build"
   },
   "eslintConfig": {
     "extends": [
