--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "react-star-ratings": "^2.3.0",
     "react-test-renderer": "^17.0.1",
     "react-transition-group": "^4.4.1",
+    "reactjs-media": "^1.5.1",
     "sweetalert": "^2.1.2",
+    "validator": "^13.6.0",
     "web-vitals": "^1.1.0"
   },
   "optionalDependencies": {
